# SDK_V3.0

./: .gitignore  CMakeLists.txt  ReadMe.txt  SDK_New(通用).rar  SDK_New.rar  SDK错误码列表.xlsx  Version.txt
src/: BS_Demo.cpp  CMakeLists.txt  LidarTest.cpp  hc_test.cpp  raspberrypi_demo.cpp  sdk_Calib_demo.cpp  sdk_V3_demo.cpp  sdk_demo.cpp  sdk_scanData.cpp  toolkit.rar
src/base/: CMakeLists.txt  HC_serial.cpp  HC_serial.h  HcData.h  HcSDK.cpp  HcSDK.h  ReadParsePackage.cpp  ReadParsePackage.h  fltline.h  hchead.cpp  hchead.h  hclidar.cpp  hclidar.h  lidar.cpp  lidar.h  ployfit.h  pointCloudFilters.cpp  pointCloudFilters.h
src/toolkit/: CMakeLists.txt  HcPointCloudData.h  Hctoolkit.cpp  Hctoolkit.h  lidar_filter.cpp  lidar_filter.h  lidar_repair.cpp  lidar_repair.h
